# card_games

./: .gitignore  LICENSE  build_files.sh  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
core/: settings.py  urls.py  wsgi.py
home/: games.py  models.py
kemps/: apps.py
ui/templates/registration/: login.html
